--- a/Social-Tree/style.css
+++ b/Social-Tree/style.css
@@ -62,3 +62,15 @@ a {
   
     clip-path: circle(100px at center);
 }
+
+@media only screen and (max-width: 620px) {
+    /* For mobile phones: */
+    body {
+      width: 100vw;
+    }
+
+    #linkBox {
+        width: 80vw;
+        padding: 15px 2vw;
+    }
+}
