--- a/Social-Tree/style.css
+++ b/Social-Tree/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    background-color: #FFFFFF40;
+    background-color: #FFFFFF50;
     border-radius: 15px;
     height: 1fr;
     width: 450px;
@@ -66,7 +66,8 @@ a {
 @media only screen and (max-width: 620px) {
     /* For mobile phones: */
     body {
-      width: 100vw;
+      width: 80vw;
+      margin-top: 10vmax;
     }
 
     #linkBox {
